--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   flutter_slider_drawer: ^2.1.3
   flutter_svg: ^2.0.10+1
+  pinput: ^4.0.0
 
 dev_dependencies:
   flutter_test:
