--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   pinput: ^4.0.0
   flutter_rating_bar: ^4.0.1
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
