added: scratch and win functionality at ticket cart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   dotted_border: ^2.1.0
   carousel_slider: ^4.2.1
+  scratcher: ^2.5.0
 
 dev_dependencies:
   flutter_test:
