--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,10 @@ dependencies:
   dotted_border: ^2.1.0
   carousel_slider: ^4.2.1
   scratcher: ^2.5.0
-  provider: ^6.1.2
   dio: ^5.4.3+1
+  flutter_riverpod: ^2.3.7
+
+  fluttertoast: ^8.2.5
 
 dev_dependencies:
   flutter_test:
