--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_riverpod: ^2.3.7
 
   fluttertoast: ^8.2.5
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
